--- a/index.html
+++ b/index.html
@@ -20,24 +20,8 @@
   <div id="map"></div>
   
   <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM52Gtx7S9R0nXBOZxSG4gr71FqKn7U4A&callback=initMap&libraries=&v=weekly"
-    async></script>
-
-  <script>
-    function initMap() {
-        // The location of Uluru
-        const uluru = { lat: -25.344, lng: 131.036 };
-        // The map, centered at Uluru
-        const map = new google.maps.Map(document.getElementById("map"), {
-          zoom: 4,
-          center: uluru,
-        });
-        // The marker, positioned at Uluru
-        const marker = new google.maps.Marker({
-          position: uluru,
-          map: map,
-        });
-      }
-  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM52Gtx7S9R0nXBOZxSG4gr71FqKn7U4A&callback=initMap&libraries=&v=weekly" defer></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
