--- a/index.html
+++ b/index.html
@@ -6,24 +6,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <style>
     #map {
-      height: 800px;
-      /* The height is 400 pixels */
+      height: 100vh;
       width: 100%;
-      /* The width is the width of the web page */
+    }
+    .list-group {
+      height: 100vh;
+      overflow-y: scroll;
+      scroll-behavior: smooth;
+
     }
   </style>
 </head>
 <body>
-  <h3>My Google Maps Demo</h3>
-  <!--The div element for the map -->
-  <div id="map"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <div id="infoListGroup" class="list-group">
+        </div>
+      </div>
+      <div class="col-9">
+        <div id="map"></div>
+      </div>
+    </div>
+  </div>
+
+  <template id="infoCard">
+    <a href="#" class="list-group-item list-group-item-action">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">List group item heading</h5>
+        <span class="badge bg-primary rounded-pill">14</span>
+      </div>
+      <p class="mb-1">Some placeholder content in a paragraph.</p>
+      <small class="text-muted">And some muted small print.</small>
+    </a>
+  </template>
   
   <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
   <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAM52Gtx7S9R0nXBOZxSG4gr71FqKn7U4A&callback=initMap&libraries=&v=weekly" defer></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="./script.js"></script>
 </body>
 </html>
