--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <div class="container">
     <div class="row">
       <div class="col-3">
+        <div id="directionsPanel" style="float:right;width:30%;height:100%"></div>
         <div id="infoListGroup" class="list-group">
         </div>
       </div>
