--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   <div class="container">
     <div class="row">
       <div class="col-3">
-        <div id="directionsPanel" style="float:right;width:30%;height:100%"></div>
         <div id="infoListGroup" class="list-group">
         </div>
       </div>
@@ -38,11 +37,11 @@
   <template id="infoCard">
     <a href="#" class="list-group-item list-group-item-action">
       <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">List group item heading</h5>
-        <span class="badge bg-primary rounded-pill">14</span>
+        <h5 class="mb-1" style="text-overflow: ellipsis; width: 200px; max-width: 200px; white-space: nowrap;"></h5>
+        <span class="badge bg-primary rounded-pill"></span>
       </div>
-      <p class="mb-1">Some placeholder content in a paragraph.</p>
-      <small class="text-muted">And some muted small print.</small>
+      <p class="mb-1"></p>
+      <small class="text-muted"></small>
     </a>
   </template>
   
