--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
       width: 100%;
     }
     .list-group {
-      height: 100vh;
+      height: 60vh;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
+    }
+    .route-card {
+      height: 40vh;
       overflow-y: scroll;
       scroll-behavior: smooth;
-
     }
     .get-location-btn {
       background-color: #fff;
@@ -42,6 +47,8 @@
       <div class="col-3">
         <div id="infoListGroup" class="list-group">
         </div>
+        <div id="routeCard" class="route-card">
+        </div>
       </div>
       <div class="col-9">
         <div id="map"></div>
@@ -57,6 +64,7 @@
       </div>
       <p class="mb-1"></p>
       <small class="text-muted"></small>
+      <button>導航</button>
     </a>
   </template>
   
