調整按鈕樣式

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <p class="mb-1"></p>
       <small class="text-muted"></small>
-      <button>導航</button>
+      <button class="btn btn-primary btn-sm">導航</button>
     </a>
   </template>
   
